--- a/index.html
+++ b/index.html
@@ -44,25 +44,26 @@
   </head>
   <body>
     <!-- NAVIGATION -->
-    <!-- Add Quill logo later -->
+    <a href="index.html"><img src="asserts/svg/journal.svg" alt="journal logo" width="50px"></a>
+    
     <ul>
       <li><a href="login.html">Login</a></li>
       <li><a href="register.html">Register</a></li>
     </ul>
 
     <!-- HERO SECTION -->
-    <h1>Mindful living for the digital world</h1>
+    <h1>Mindful living for the <br> digital world</h1>
     <p>
       The ultimate bullet journal app to document, reflect, and embrace your
       thoughts and expriences
     </p>
     <ul>
       <li><a href="register.html">Get Started</a></li>
-      <li>Learn More</li>
+      <li><a href="#features">Learn More</a></li>
     </ul>
 
     <!-- FEATURES SECTION -->
-    <h2>Finally, a simple and easy to use journal app</h2>
+    <h2 id="features">Finally, a simple and easy to use journal app</h2>
 
     <h3>Write all your journal in a few clicks</h3>
     <p>
@@ -71,12 +72,16 @@
       intiutive app, you can easily document your thoughts and feelings in just
       a few clicks.
     </p>
+    <img src="asserts/img/features_1.png" alt="simple online journaling" width="300px">
 
     <h3>Beautifully displayed and neatly organised</h3>
     <p>Not just wores on a screen - our journals are beautifully displayed.</p>
+    <img src="asserts/img/feature_2.png" alt="beautifully displayed journals" width="300px">
+
 
     <h3>Create and reflect from anywhere in the world</h3>
     <p>Whether you're at home or exploring the far corners of the world</p>
+    <img src="asserts/img/feature_3.png" alt="create journals anywhere" width="300px">
 
     <!-- CTA SECTION -->
     <h2>Get Started now</h2>
@@ -84,14 +89,14 @@
 
     <!-- FOOTER -->
 
-    <!-- Add Quill logo and hyperlink -->
+    <a href="index.html"><img src="asserts/svg/journal.svg" alt="journal logo" width="50px"></a>
     <!-- Add in social media icons later -->
     <ul>
-      <li><a href="https://www.instagram.com">Instgram</a></li>
-      <li><a href="http://www.facebook.com">Facebook</a></li>
-      <li><a href="https://www.twitter.com">Twitter</a></li>
-      <li><a href="https://www.linkedIn.com">LinkedIn</a></li>
-      <li><a href="https://www.youtube.com">Youtube</a></li>
+      <li><a href="https://www.instagram.com"><img src="asserts/svg/logo-instagram.svg" alt="Instagram logo" width="20px"></a></li>
+      <li><a href="http://www.facebook.com"><img src="asserts/svg/logo-facebook.svg" alt="Facebook logo" width="20px"></a></li>
+      <li><a href="https://www.twitter.com"><img src="asserts/svg/logo-twitter.svg" alt="X logo" width="20px"></a></li>
+      <li><a href="https://www.linkedIn.com"><img src="asserts/svg/logo-linkedin.svg" alt="LinkedIn logo" width="20px"></a></li>
+      <li><a href="https://www.youtube.com"><img src="asserts/svg/logo-youtube.svg" alt="Youtube logo" width="20px"></a></li>
     </ul>
     <ul>
       <li><a href="index.html">Home</a></li>
