changes on title name

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- 
     - primary meta tags
   -->
-    <title>Quill</title>
+    <title>Fiti's Quill</title>
     <meta name="title" content="Quill" />
     <meta
       name="description"
@@ -58,7 +58,7 @@
   <!-- HERO SECTION -->
     <section>
       <h1><span>Mindful living</span> for the <br> digital world 📱</h1>
-      
+
       <p>
         The ultimate bullet journal app to document, reflect, and embrace your
         thoughts and expriences
@@ -126,7 +126,7 @@
     </ul>
 
     <p>Made with ♥️ in Maputo</p>
-    <p>Copyright © 2025 Quill. All rights reserved.</p>
+    <p>Copyright © 2025 Fiti's Quill. All rights reserved.</p>
   </footer>
   </body>
 </html>
