--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
 
         <ul>
           <li><a href="login.html">Login</a></li>
-          <li><a href="register.html">Register</a></li>
-          <li><a href="create-journal.html">Create Journal</a></li>
+          <li><a class="btn-primary" href="register.html">Register</a></li>
         </ul>
       </nav>
 
@@ -56,7 +55,7 @@
         </p>
 
         <ul>
-          <li><a href="register.html">Get started</a></li>
+          <li><a class="btn-primary" href="register.html">Get started</a></li>
           <li><a href="#features">Learn more</a></li>
         </ul>
       </section>
@@ -112,7 +111,7 @@
       <!-- CTA Section -->
       <section>
         <h2>Get started now</h2>
-        <a href="register.html">Get started</a>
+        <a class="btn btn-secondary" href="register.html">Get started</a>
       </section>
     </main>
 
@@ -168,8 +167,10 @@
         <li><a href="register.html">Register</a></li>
       </ul>
 
-      <p>Made with ♥️ in Maputo</p>
-      <p>Copyright © 2025 Fiti's Quill. All rights reserved.</p>
+      <p class="small-text">Made with ♥️ in Maputo</p>
+      <p class="small-text">
+        Copyright © 2025 Fiti's Quill. All rights reserved.
+      </p>
     </footer>
   </body>
 </html>
