--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </nav>
 
       <!-- HERO SECTION -->
-      <section>
+      <section class="hero-section">
         <h1>
           <span>Mindful living</span> for the <br />
           digital world 📱
@@ -55,7 +55,9 @@
         </p>
 
         <ul>
-          <li><a class="btn-primary" href="register.html">Get started</a></li>
+          <li>
+            <a class="btn btn-primary" href="register.html">Get started</a>
+          </li>
           <li><a href="#features">Learn more</a></li>
         </ul>
       </section>
@@ -64,7 +66,7 @@
     <!-- FEATURES SECTION -->
     <main>
       <section>
-        <h2 id="features">
+        <h2 class="features-main-heading">
           Finally, a <span> simple and easy </span> to use journal app
         </h2>
 
@@ -109,14 +111,14 @@
       </section>
 
       <!-- CTA Section -->
-      <section>
-        <h2>Get started now</h2>
+      <div class="cta-section">
+        <h2 >Get started now</h2>
         <a class="btn btn-secondary" href="register.html">Get started</a>
-      </section>
+      </div>
     </main>
 
     <!-- FOOTER SECTION -->
-    <footer>
+    <footer class="footer">
       <a href="index.html"
         ><img src="asserts/svg/journal.svg" alt="journal logo" width="50px"
       /></a>
