Updated height and width of content

--- a/index.html
+++ b/index.html
@@ -18,23 +18,18 @@
     <!--- custom css link -->
     <link rel="stylesheet" href="asserts/css/style.css" />
     <title>Fiti's Quill</title>
-    <!--- favicon -->
-    <link rel="shortcut icon" href="#" type="image/svg+xml" />
-    <!--- google font link -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;600;700&family=Rubik:wght@300,400;700&display=swap"
-      rel="stylesheet"
-    />
   </head>
   <body>
     <!-- NAVIGATION SECTION -->
     <header>
       <nav>
         <a href="index.html"
-          ><img src="asserts/svg/journal.svg" alt="journal logo" width="50px"
-        /></a>
+          ><img
+            class="logo-md"
+            src="asserts/svg/journal.svg"
+            alt="journal logo"
+          />Fiti's Quill</a
+        >
 
         <ul>
           <li><a href="login.html">Login</a></li>
@@ -45,7 +40,9 @@
       <!-- HERO SECTION -->
       <section class="hero-section">
         <h1>
-          <span>Mindful living</span> for the <br />
+          <span class="highlight highlight-secondary">Mindful living</span> for
+          the
+          <br />
           digital world 📱
         </h1>
 
@@ -67,7 +64,9 @@
     <main>
       <section>
         <h2 class="features-main-heading">
-          Finally, a <span> simple and easy </span> to use journal app
+          Finally, a
+          <span class="highlight-tertiary"> simple and easy </span> to use
+          journal app
         </h2>
 
         <div>
@@ -79,9 +78,9 @@
             thoughts and feelings in just a few clicks.
           </p>
           <img
+            class="feature-img"
             src="asserts/img/features_1.png"
             alt="simple online journaling"
-            width="300px"
           />
         </div>
 
@@ -91,9 +90,9 @@
             Not just wores on a screen - our journals are beautifully displayed.
           </p>
           <img
+            class="feature-img"
             src="asserts/img/feature_2.png"
             alt="beautifully displayed journals"
-            width="300px"
           />
         </div>
 
@@ -103,61 +102,66 @@
             Whether you're at home or exploring the far corners of the world
           </p>
           <img
+            class="feature-img"
             src="asserts/img/feature_3.png"
             alt="create journals anywhere"
-            width="300px"
           />
         </div>
       </section>
 
       <!-- CTA Section -->
-      <div class="cta-section">
-        <h2 >Get started now</h2>
-        <a class="btn btn-secondary" href="register.html">Get started</a>
-      </div>
+      <section class="cta-section">
+        <div class="cta-card">
+          <h2>Get started now</h2>
+          <a class="btn btn-secondary" href="register.html">Get started</a>
+        </div>
+      </section>
     </main>
 
     <!-- FOOTER SECTION -->
     <footer class="footer">
       <a href="index.html"
-        ><img src="asserts/svg/journal.svg" alt="journal logo" width="50px"
+        ><img class="logo-sm" src="asserts/svg/journal.svg" alt="journal logo"
       /></a>
       <ul>
         <li>
           <a href="https://www.instagram.com"
             ><img
+              class="social-icons"
               src="asserts/svg/logo-instagram.svg"
               alt="Instagram logo"
-              width="20px"
           /></a>
         </li>
         <li>
           <a href="http://www.facebook.com"
             ><img
+              class="social-icons"
               src="asserts/svg/logo-facebook.svg"
               alt="Facebook logo"
-              width="20px"
           /></a>
         </li>
         <li>
           <a href="https://www.twitter.com"
-            ><img src="asserts/svg/logo-twitter.svg" alt="X logo" width="20px"
+            ><img
+              class="social-icons"
+              src="asserts/svg/logo-twitter.svg"
+              alt="X logo"
           /></a>
         </li>
         <li>
           <a href="https://www.linkedIn.com"
             ><img
+              class="social-icons"
               src="asserts/svg/logo-linkedin.svg"
               alt="LinkedIn logo"
-              width="20px"
           /></a>
         </li>
         <li>
           <a href="https://www.youtube.com"
             ><img
+              class="social-icons"
               src="asserts/svg/logo-youtube.svg"
               alt="Youtube logo"
-              width="20px"
           /></a>
         </li>
       </ul>
