--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         <ul>
           <li><a href="login.html">Login</a></li>
-          <li><a class="btn-primary" href="register.html">Register</a></li>
+          <li><a class="btn btn-primary" href="register.html">Register</a></li>
         </ul>
       </nav>
 
