--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         >
 
         <ul>
-          <li><a href="login.html">Login</a></li>
+          <li><a class="btn btn-primary-outline" href="login.html">Login</a></li>
           <li><a class="btn btn-primary" href="register.html">Register</a></li>
         </ul>
       </nav>
@@ -55,7 +55,7 @@
           <li>
             <a class="btn btn-primary" href="register.html">Get started</a>
           </li>
-          <li><a href="#features">Learn more</a></li>
+          <li><a class="btn btn-primary-outline" href="#features">Learn more</a></li>
         </ul>
       </section>
     </header>
