--- a/index.html
+++ b/index.html
@@ -20,163 +20,175 @@
     <title>Fiti's Quill</title>
   </head>
   <body>
-    <!-- NAVIGATION SECTION -->
-    <header>
-      <nav>
+    <div class="container">
+      <!-- NAVIGATION SECTION -->
+      <header>
+        <nav>
+          <a href="index.html"
+            ><img
+              class="logo-md"
+              src="asserts/svg/journal.svg"
+              alt="journal logo"
+            />Fiti's Quill</a
+          >
+
+          <ul>
+            <li>
+              <a class="btn btn-primary-outline" href="login.html">Login</a>
+            </li>
+            <li>
+              <a class="btn btn-primary" href="register.html">Register</a>
+            </li>
+          </ul>
+        </nav>
+
+        <!-- HERO SECTION -->
+        <section class="hero-section">
+          <h1>
+            <span class="highlight highlight-secondary">Mindful living</span>
+            for the
+            <br />
+            digital world 📱
+          </h1>
+
+          <p>
+            The ultimate bullet journal app to document, reflect, and embrace
+            your thoughts and expriences
+          </p>
+
+          <ul>
+            <li>
+              <a class="btn btn-primary" href="register.html">Get started</a>
+            </li>
+            <li>
+              <a class="btn btn-primary-outline" href="#features">Learn more</a>
+            </li>
+          </ul>
+        </section>
+      </header>
+
+      <!-- FEATURES SECTION -->
+      <main>
+        <section>
+          <h2 class="features-main-heading">
+            Finally, a
+            <span class="highlight-tertiary"> simple and easy </span> to use
+            journal app
+          </h2>
+
+          <div>
+            <h3>Write all your journal in a few clicks</h3>
+            <p>
+              Unlock the simplicity of online journaling - say goodbye to the
+              hassle of traditional journaling and hello to a streamlined
+              expriences. With our intiutive app, you can easily document your
+              thoughts and feelings in just a few clicks.
+            </p>
+            <img
+              class="feature-img"
+              src="asserts/img/features_1.png"
+              alt="simple online journaling"
+            />
+          </div>
+
+          <div>
+            <h3>Beautifully displayed and neatly organised</h3>
+            <p>
+              Not just wores on a screen - our journals are beautifully
+              displayed.
+            </p>
+            <img
+              class="feature-img"
+              src="asserts/img/feature_2.png"
+              alt="beautifully displayed journals"
+            />
+          </div>
+
+          <div>
+            <h3>Create and reflect from anywhere in the world</h3>
+            <p>
+              Whether you're at home or exploring the far corners of the world
+            </p>
+            <img
+              class="feature-img"
+              src="asserts/img/feature_3.png"
+              alt="create journals anywhere"
+            />
+          </div>
+        </section>
+
+        <!-- CTA Section -->
+        <section class="cta-section">
+          <div class="cta-card">
+            <h2>Get started now</h2>
+            <a class="btn btn-secondary" href="register.html">Get started</a>
+          </div>
+        </section>
+      </main>
+
+      <!-- FOOTER SECTION -->
+      <footer class="footer">
         <a href="index.html"
           ><img
-            class="logo-md"
+            class="logo-sm"
             src="asserts/svg/journal.svg"
             alt="journal logo"
-          />Fiti's Quill</a
-        >
-
-        <ul>
-          <li><a class="btn btn-primary-outline" href="login.html">Login</a></li>
-          <li><a class="btn btn-primary" href="register.html">Register</a></li>
-        </ul>
-      </nav>
-
-      <!-- HERO SECTION -->
-      <section class="hero-section">
-        <h1>
-          <span class="highlight highlight-secondary">Mindful living</span> for
-          the
-          <br />
-          digital world 📱
-        </h1>
-
-        <p>
-          The ultimate bullet journal app to document, reflect, and embrace your
-          thoughts and expriences
-        </p>
-
+        /></a>
         <ul>
           <li>
-            <a class="btn btn-primary" href="register.html">Get started</a>
+            <a href="https://www.instagram.com"
+              ><img
+                class="social-icons"
+                src="asserts/svg/logo-instagram.svg"
+                alt="Instagram logo"
+            /></a>
           </li>
-          <li><a class="btn btn-primary-outline" href="#features">Learn more</a></li>
+          <li>
+            <a href="http://www.facebook.com"
+              ><img
+                class="social-icons"
+                src="asserts/svg/logo-facebook.svg"
+                alt="Facebook logo"
+            /></a>
+          </li>
+          <li>
+            <a href="https://www.twitter.com"
+              ><img
+                class="social-icons"
+                src="asserts/svg/logo-twitter.svg"
+                alt="X logo"
+            /></a>
+          </li>
+          <li>
+            <a href="https://www.linkedIn.com"
+              ><img
+                class="social-icons"
+                src="asserts/svg/logo-linkedin.svg"
+                alt="LinkedIn logo"
+            /></a>
+          </li>
+          <li>
+            <a href="https://www.youtube.com"
+              ><img
+                class="social-icons"
+                src="asserts/svg/logo-youtube.svg"
+                alt="Youtube logo"
+            /></a>
+          </li>
         </ul>
-      </section>
-    </header>
 
-    <!-- FEATURES SECTION -->
-    <main>
-      <section>
-        <h2 class="features-main-heading">
-          Finally, a
-          <span class="highlight-tertiary"> simple and easy </span> to use
-          journal app
-        </h2>
+        <p>Follow us on social media</p>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="login.html">Login</a></li>
+          <li><a href="register.html">Register</a></li>
+        </ul>
 
-        <div>
-          <h3>Write all your journal in a few clicks</h3>
-          <p>
-            Unlock the simplicity of online journaling - say goodbye to the
-            hassle of traditional journaling and hello to a streamlined
-            expriences. With our intiutive app, you can easily document your
-            thoughts and feelings in just a few clicks.
-          </p>
-          <img
-            class="feature-img"
-            src="asserts/img/features_1.png"
-            alt="simple online journaling"
-          />
-        </div>
-
-        <div>
-          <h3>Beautifully displayed and neatly organised</h3>
-          <p>
-            Not just wores on a screen - our journals are beautifully displayed.
-          </p>
-          <img
-            class="feature-img"
-            src="asserts/img/feature_2.png"
-            alt="beautifully displayed journals"
-          />
-        </div>
-
-        <div>
-          <h3>Create and reflect from anywhere in the world</h3>
-          <p>
-            Whether you're at home or exploring the far corners of the world
-          </p>
-          <img
-            class="feature-img"
-            src="asserts/img/feature_3.png"
-            alt="create journals anywhere"
-          />
-        </div>
-      </section>
-
-      <!-- CTA Section -->
-      <section class="cta-section">
-        <div class="cta-card">
-          <h2>Get started now</h2>
-          <a class="btn btn-secondary" href="register.html">Get started</a>
-        </div>
-      </section>
-    </main>
-
-    <!-- FOOTER SECTION -->
-    <footer class="footer">
-      <a href="index.html"
-        ><img class="logo-sm" src="asserts/svg/journal.svg" alt="journal logo"
-      /></a>
-      <ul>
-        <li>
-          <a href="https://www.instagram.com"
-            ><img
-              class="social-icons"
-              src="asserts/svg/logo-instagram.svg"
-              alt="Instagram logo"
-          /></a>
-        </li>
-        <li>
-          <a href="http://www.facebook.com"
-            ><img
-              class="social-icons"
-              src="asserts/svg/logo-facebook.svg"
-              alt="Facebook logo"
-          /></a>
-        </li>
-        <li>
-          <a href="https://www.twitter.com"
-            ><img
-              class="social-icons"
-              src="asserts/svg/logo-twitter.svg"
-              alt="X logo"
-          /></a>
-        </li>
-        <li>
-          <a href="https://www.linkedIn.com"
-            ><img
-              class="social-icons"
-              src="asserts/svg/logo-linkedin.svg"
-              alt="LinkedIn logo"
-          /></a>
-        </li>
-        <li>
-          <a href="https://www.youtube.com"
-            ><img
-              class="social-icons"
-              src="asserts/svg/logo-youtube.svg"
-              alt="Youtube logo"
-          /></a>
-        </li>
-      </ul>
-
-      <p>Follow us on social media</p>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="login.html">Login</a></li>
-        <li><a href="register.html">Register</a></li>
-      </ul>
-
-      <p class="small-text">Made with ♥️ in Maputo</p>
-      <p class="small-text">
-        Copyright © 2025 Fiti's Quill. All rights reserved.
-      </p>
-    </footer>
+        <p class="small-text">Made with ♥️ in Maputo</p>
+        <p class="small-text">
+          Copyright © 2025 Fiti's Quill. All rights reserved.
+        </p>
+      </footer>
+    </div>
   </body>
 </html>
