added display properties

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="container">
       <!-- NAVIGATION SECTION -->
       <header>
-        <nav>
+        <nav class="navbar"> 
           <a href="index.html"
             ><img
               class="logo-md"
@@ -44,14 +44,14 @@
 
         <!-- HERO SECTION -->
         <section class="hero-section">
-          <h1>
+          <h1 class="hero-heading">
             <span class="highlight highlight-secondary">Mindful living</span>
             for the
             <br />
             digital world 📱
           </h1>
 
-          <p>
+          <p class="hero-paragraph">
             The ultimate bullet journal app to document, reflect, and embrace
             your thoughts and expriences
           </p>
@@ -69,7 +69,7 @@
 
       <!-- FEATURES SECTION -->
       <main>
-        <section>
+        <section class="features-section">
           <h2 class="features-main-heading">
             Finally, a
             <span class="highlight-tertiary"> simple and easy </span> to use
