--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           </h2>
 
           <div>
-            <h3>Write all your journal in a few clicks</h3>
+            <h3 class="feature-headings">Write all your journal in a few clicks</h3>
             <p>
               Unlock the simplicity of online journaling - say goodbye to the
               hassle of traditional journaling and hello to a streamlined
@@ -92,7 +92,7 @@
           </div>
 
           <div>
-            <h3>Beautifully displayed and neatly organised</h3>
+            <h3 class="feature-headings">Beautifully displayed and neatly organised</h3>
             <p>
               Not just wores on a screen - our journals are beautifully
               displayed.
@@ -105,7 +105,7 @@
           </div>
 
           <div>
-            <h3>Create and reflect from anywhere in the world</h3>
+            <h3 class="feature-headings">Create and reflect from anywhere in the world</h3>
             <p>
               Whether you're at home or exploring the far corners of the world
             </p>
@@ -120,7 +120,7 @@
         <!-- CTA Section -->
         <section class="cta-section">
           <div class="cta-card">
-            <h2>Get started now</h2>
+            <h2 class="cta-heading">Get started now</h2>
             <a class="btn btn-secondary" href="register.html">Get started</a>
           </div>
         </section>
