--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <div class="container">
       <!-- NAVIGATION SECTION -->
-      <header>
+      <header class="header">
         <nav class="navbar"> 
           <a href="index.html"
             ><img
