added fixed height on nav. used calc() to set height values to hero-section

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <div class="container">
       <!-- NAVIGATION SECTION -->
-      <header class="header">
+      <header>
         <nav class="navbar"> 
           <a href="index.html"
             ><img
